Make test parameterised